[package]
name = "my_process_hid-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
my_process_hid-common = { path = "../my_process_hid-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "my_process_hid"
path = "src/main.rs"
